Update for room